@@ -151,5 +151,5 @@ ALIASES += internal_end="\endcond"
 ALIASES += reimp="\cond REIMPLEMENTATION"
 ALIASES += reimp_end="\endcond"
 
-EXCLUDE_SYMBOLS += MostUsedCounter DcpWrongApplets DuiControlPanelIfProxy
+EXCLUDE_SYMBOLS += MostUsedCounter DcpWrongApplets DuiControlPanelIfProxy *Priv*
 
