@@ -17,12 +17,14 @@ class MDesktopEntry;
 class DcpAppletMetadataPrivate;
 
 /*!
- * \brief DcpAppletMetadata contains all the information on the applet variant
- * \details This class provides all the information about an applet variant in 
+ * \brief This class contains all the information coming from the desktop file
+ *        of the applet.
+ *
+ * \details This class provides all the information about an applet variant in
  *   practical format. Every applet can hold one or more .desktop file, for each
  *   there will be a #DcpAppletMetadata class object, and each will define a
  *   configuration for the applet binary. 
- * 
+ *
  *   If an applet have more than one desktop file we say the applet have more
  *   than one applet variant, that is from the user point of view the applet
  *   seems like it were more than one applet, but these variants might share 
