@@ -3,7 +3,6 @@
 class DcpWidgetPrivate {
 public:
     DcpWidgetPrivate ();
-    int m_Referer;
     int m_WidgetId;
 };
 #endif //DCPWIDGETPRIVATE_H 
